2019-1/231/users/4208/executions/1651_2704.log
== TEST (2019-04-14 21:16:51) 
-- CODE:
nota=float(input())
ponto=input("vai receber  bonificacao?( s/n)")

if(ponto.upper()=="s")
  print(nota+0.1*nota)
	else:
		print(nota)
-- ERROR:
File "XXXX", line 4
    if(ponto.upper()=="s")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:17:07) 
-- CODE:
nota=float(input())
ponto=input("vai receber  bonificacao?( s/n)")

if(ponto.upper()=='s')
  print(nota+0.1*nota)
	else:
		print(nota)
-- ERROR:
File "XXXX", line 4
    if(ponto.upper()=='s')
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:17:18) 
-- CODE:
nota=float(input())
ponto=input("vai receber  bonificacao?( s/n)")

if(ponto.lower()=='s')
  print(nota+0.1*nota)
	else:
		print(nota)
-- ERROR:
File "XXXX", line 4
    if(ponto.lower()=='s')
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:17:45) 
-- CODE:
nota=float(input())
ponto=input("vai receber  bonificacao?( s/n)")

if(ponto.upper()=="s"):
  print(nota+0.1*nota)
	else:
		print(nota)
-- ERROR:
File "XXXX", line 6
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:17:59) 
-- CODE:
nota=float(input())
ponto=input("vai receber  bonificacao?( s/n)")

if(ponto.upper()== "s" ):
  print(nota+0.1*nota)
	else:
		print(nota)
-- ERROR:
File "XXXX", line 6
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:18:58) 
-- CODE:
nota=float(input())
ponto=input("vai receber  bonificacao?( S/N)")

if(ponto.lower()== 's' ):
  print(nota+0.1*nota)
	else:
		print(nota)
-- ERROR:
File "XXXX", line 6
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:19:07) 
-- CODE:
nota=float(input())
ponto=input("vai receber  bonificacao?( S/N)")

if(ponto.lower()== 's' ):
  print(nota+0.1*nota)
else:
		print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:19:36) 
-- CODE:
nota=float(input())
ponto=input("vai receber  bonificacao?( S/N)")

if(ponto.lower()== 's' ):
  print(nota+0.1*nota)
else:
		print(nota)
-- EXECUTION TIME:
0.151287
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
